# speedbox

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  package.json
.github/workflows/: ci.yml  docker.yml  release.yml
package/luci-app-speedbox/: Makefile
package/luci-app-speedbox/root/www/speedbox/: index.html
package/luci-app-speedbox/root/www/speedbox/assets/: index-1AlKiZC1.css  index-B-xYXOBF.js  index-BKIFYvt2.js  index-CANTWBGN.js  index-CP1Knnhz.css  index-Cscg9opB.js  index-Ct5BoJl9.js  index-DN4aQhmq.css  index-DNmy4n2L.css  index-DfnA5Rex.css  index-NLs6GJAo.js
package/speedbox/: Makefile
package/speedbox/files/: speedbox.config  speedbox.init
src/: config.rs  data.rs  lib.rs  main.rs
src/protocol/: http.rs  mod.rs  signaling.rs  ws.rs
tests/: e2e.rs
web/: .gitignore  .swcrc  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
web/e2e/: speedbox.test.ts
web/src/: Chart.jsx  Chart.tsx  Gauge.jsx  Gauge.tsx  api.js  api.ts  app.jsx  app.tsx  style.css  tokens.css  useSpeedTest.js  useSpeedTest.ts
web/src/components/: AdvancedSettings.tsx  BackendConfig.tsx  PairingPanel.tsx  ProtocolSelector.tsx
web/src/hooks/: useSpeedTestAdapter.ts  useWebRtcPairing.ts
web/src/lib/: index.ts  speedtest.ts
web/src/lib/adapters/: http.ts  webrtc.ts  websocket.ts
web/test/: Chart.test.jsx  Chart.test.tsx  Gauge.test.jsx  Gauge.test.tsx  adapters.test.ts  api.test.js  api.test.ts  components.test.tsx  speedTest.test.js  speedTest.test.ts
(+3 files in other folders)
