[package]
name = "speedbox"
version = "0.1.0"
edition = "2021"
description = "Lightweight LAN speed test backend for OpenWrt"

[dependencies]
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http-body = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
bytes = "1"
futures-core = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
