[package]
name = "speedbox"
version = "0.1.0"
edition = "2021"
description = "Lightweight LAN speed test backend for OpenWrt"

[dependencies]
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http-body = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
bytes = "1"
futures-core = "0.3"

[features]
default = ["ws", "webrtc"]
ws = ["dep:fastwebsockets"]
webrtc = ["dep:fastwebsockets"]

[dependencies.fastwebsockets]
version = "0.8"
features = ["upgrade"]
optional = true

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
serde_json = "1"
